fix: exeBugspots will be success.

--- a/src/origin/content.css
+++ b/src/origin/content.css
@@ -1,7 +1,12 @@
-.notDisplayed {
+.gb-not-displayed {
     background-color: gray;
 }
 
-.displayed {
+.gb-displayed {
     background-color: yellow;
+}
+
+.gb-button {
+    margin-left: 5px;
+    padding: 1px 8px;
 }
