--- a/src/origin/content.css
+++ b/src/origin/content.css
@@ -1,12 +1,25 @@
+/* important means that this css overrides site css. */
+
 .gb-button {
-    padding: 1px 8px;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    border-right-width: 1px !important;
+    border-top-right-radius: 3px !important;;
+    border-bottom-right-radius: 3px !important;;
+}
+
+.gb-button + .BtnGroup-item {
+    border-left-width: 1px !important;
+    border-top-left-radius: 3px !important;
+    border-bottom-left-radius: 3px !important;
+}
+
+.gb-button-icon {
 }
 
 .gb-score {
     margin-right: 5px;
     white-space: nowrap;
-}
-
-.gb-controller {
-    margin-right: 5px;
 }
